--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,20 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+
+    <!-- header -->
+
+    <include src=""></include>
+
+    <!--main -->
+    <main>
+      <include src=""></include>
+      <include src=""></include>
+      <include src=""></include>
+      <include src=""></include>
+    </main>
+
+    <!-- footer -->
+    <include src=""></include>
   </body>
 </html>
